--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.5",
+    "date-fns": "^3.6.0",
     "expo": "^51.0.31",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
@@ -33,6 +34,7 @@
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.31.1",
     "react-native-table-component": "^1.2.2",
+    "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
@@ -40,6 +42,7 @@
     "@types/react": "~18.2.45",
     "@types/react-native-datepicker": "^1.7.6",
     "@types/react-native-table-component": "^1.2.8",
+    "@types/react-native-vector-icons": "^6.4.18",
     "typescript": "~5.3.3"
   },
   "private": true
