--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.5",
+    "base-64": "^1.0.0",
     "date-fns": "^3.6.0",
     "expo": "^51.0.31",
     "expo-status-bar": "~1.12.1",
@@ -39,6 +40,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/base-64": "^1.0.2",
     "@types/react": "~18.2.45",
     "@types/react-native-datepicker": "^1.7.6",
     "@types/react-native-table-component": "^1.2.8",
